[gd_scene load_steps=12 format=3]

[ext_resource path="res://src/world/world_controller.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/AchievementFeed.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/components/PlayerHudCluster.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/world/world_manager.gd" type="Script" id=4]
[ext_resource path="res://src/world/environment/environment_controller.gd" type="Script" id=5]
[ext_resource path="res://resources/world/biomes/grasslands.tres" type="Resource" id=6]
[ext_resource path="res://resources/world/biomes/dunes.tres" type="Resource" id=7]
[ext_resource path="res://resources/world/biomes/snowfield.tres" type="Resource" id=8]
[ext_resource path="res://resources/world/biomes/sakura_grove.tres" type="Resource" id=12]
[ext_resource path="res://resources/world/time_of_day/day.tres" type="Resource" id=9]
[ext_resource path="res://resources/world/time_of_day/night.tres" type="Resource" id=10]

[node name="World" type="Node2D"]
script = ExtResource(1)

[node name="Environment" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource(5)
auto_initialize = false
biome_definitions = [ExtResource(6), ExtResource(7), ExtResource(8), ExtResource(12)]
time_of_day_definitions = [ExtResource(9), ExtResource(10)]

[node name="WorldManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource(4)

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]
layer = 80

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
alignment = 0

[node name="PlayerHudCluster" parent="HUD/MarginContainer/VBoxContainer" instance=ExtResource(3)]

[node name="ObjectiveLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SURVIVE 00:00"
horizontal_alignment = 1

[node name="AchievementFeed" parent="HUD" instance=ExtResource(2)]
